--- a/src/webapp/package.json
+++ b/src/webapp/package.json
@@ -1,76 +1,83 @@
 {
-	"name": "webapp",
-	"version": "0.1.0",
-	"private": false,
-	"license": "MIT",
-	"dependencies": {
-		"@craco/craco": "^6.1.2",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.1.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/axios": "^0.14.0",
-		"@types/dexie": "^1.3.1",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/node-rsa": "^1.1.0",
-		"@types/react": "^17.0.0",
-		"@types/react-dom": "^17.0.0",
-		"@types/react-router-dom": "^5.1.7",
-		"@types/uuid": "^8.3.0",
-		"autoprefixer": "^9",
-		"axios": "^0.25.0",
-		"comlink": "^4.3.1",
-		"dexie": "^3.0.3",
-		"husky": "^6.0.0",
-		"moment": "^2.29.1",
-		"node-rsa": "^1.1.1",
-		"postcss": "^7",
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"react-icons": "^4.3.1",
-		"react-redux": "^7.2.4",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
-		"react-toastify": "^8.1.1",
-		"react-tooltip": "^4.2.21",
-		"redux": "^4.1.0",
-		"redux-thunk": "^2.3.0",
-		"replace-in-file": "^6.2.0",
-		"rxjs": "^6.6.7",
-		"socket.io-client": "^4.0.1",
-		"stylelint-config-recommended": "^5.0.0",
-		"tailwindcss": "npm:@tailwindcss/postcss7-compat",
-		"ts-loader": "8.3.0",
-		"typescript": "^4.1.2",
-		"uuid": "^8.3.2",
-		"web-vitals": "^1.0.1",
-		"webpack-cli": "^4.7.2"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@svgr/cli": "^5.5.0",
-		"@types/react-redux": "^7.1.16",
-		"@types/redux": "^3.6.0",
-		"@types/redux-thunk": "^2.1.0"
-	},
-	"resolutions": {
-		"react-error-overlay": "6.0.9"
-	}
+  "name": "webapp",
+  "version": "0.1.0",
+  "private": false,
+  "license": "MIT",
+  "dependencies": {
+    "@craco/craco": "^6.1.2",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/axios": "^0.14.0",
+    "@types/dexie": "^1.3.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/node-rsa": "^1.1.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/uuid": "^8.3.0",
+    "autoprefixer": "^9",
+    "axios": "^0.25.0",
+    "comlink": "^4.3.1",
+    "dexie": "^3.0.3",
+    "husky": "^6.0.0",
+    "moment": "^2.29.1",
+    "node-rsa": "^1.1.1",
+    "postcss": "^7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-toastify": "^8.1.1",
+    "react-tooltip": "^4.2.21",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
+    "replace-in-file": "^6.2.0",
+    "rxjs": "^6.6.7",
+    "socket.io-client": "^4.0.1",
+    "stylelint-config-recommended": "^5.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
+    "ts-loader": "8.3.0",
+    "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1",
+    "webpack-cli": "^4.7.2"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "node pre-build.js && craco build",
+    "test": "craco test",
+    "worker": "webpack",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@svgr/cli": "^5.5.0",
+    "@types/react-redux": "^7.1.16",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0"
+  },
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  }
 }
