--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "bootstrap:clean": "./remove-modules.sh; npm install; lerna bootstrap;",
     "bootstrap": "npm install; lerna bootstrap;",
     "start:webapp": "lerna run --scope webapp --stream start",
-    "build:webapp": "lerna run --scope webapp --stream build"
+    "build:webapp": "lerna run --scope webapp --stream build",
+    "start:full-node": "lerna run --scope full-node --stream start",
+    "build:full-node": "lerna run --scope full-node --stream build"
   },
   "devDependencies": {
     "lerna": "^3.22.1"
