--- a/src/webapp/package.json
+++ b/src/webapp/package.json
@@ -1,56 +1,42 @@
 {
   "name": "webapp",
   "version": "0.1.0",
-  "private": false,
-  "license": "MIT",
+  "private": true,
   "dependencies": {
-    "@craco/craco": "^6.1.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/axios": "^0.14.0",
-    "@types/dexie": "^1.3.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/node-rsa": "^1.1.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router-dom": "^5.1.7",
-    "@types/uuid": "^8.3.0",
-    "autoprefixer": "^9",
-    "axios": "^0.25.0",
-    "comlink": "^4.3.1",
-    "dexie": "^3.0.3",
-    "husky": "^6.0.0",
-    "moment": "^2.29.1",
-    "node-rsa": "^1.1.1",
-    "postcss": "^7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.1.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.27",
+    "@types/react": "^18.0.5",
+    "@types/react-dom": "^18.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-scripts": "5.0.1",
+    "typescript": "^4.6.3",
+    "web-vitals": "^2.1.4",
+    "axios": "^0.26.1",
+    "dexie": "^3.2.1",
+    "moment": "^2.29.3",
     "react-icons": "^4.3.1",
-    "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "react-toastify": "^8.1.1",
+    "react-toastify": "^8.2.0",
     "react-tooltip": "^4.2.21",
-    "redux": "^4.1.0",
-    "redux-thunk": "^2.3.0",
-    "replace-in-file": "^6.2.0",
-    "rxjs": "^6.6.7",
-    "socket.io-client": "^4.0.1",
-    "stylelint-config-recommended": "^5.0.0",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
-    "ts-loader": "8.3.0",
-    "typescript": "^4.1.2",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1",
-    "webpack-cli": "^4.7.2"
+    "react-router-dom": "^6.3.0",
+    "node-rsa": "^1.1.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.4",
+    "lerna": "^3.22.1",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
+    "@types/uuid": "^8.3.4",
+    "@types/node-rsa": "^1.1.1"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "node pre-build.js && craco build",
-    "test": "craco test",
-    "worker": "webpack",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -70,14 +56,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@svgr/cli": "^5.5.0",
-    "@types/react-redux": "^7.1.16",
-    "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
-  },
-  "resolutions": {
-    "react-error-overlay": "6.0.9"
   }
 }
