--- a/src/webapp/public/manifest.json
+++ b/src/webapp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "salimon",
-  "name": "Salimon",
+  "short_name": "React App",
+  "name": "Create React App Sample",
   "icons": [
     {
       "src": "favicon.ico",
