--- a/src/webapp/package.json
+++ b/src/webapp/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
     "@babel/core": "^7.16.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
@@ -13,6 +14,7 @@
     "@types/node": "^16.11.27",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
+    "assert": "^2.0.0",
     "axios": "^0.26.1",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -20,10 +22,14 @@
     "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
     "browserslist": "^4.18.1",
+    "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
+    "datamodels": "^1.0.0",
     "dexie": "^3.2.1",
     "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
@@ -32,6 +38,7 @@
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
     "fs-extra": "^10.0.0",
+    "graphql": "^16.3.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -60,6 +67,7 @@
     "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
@@ -69,20 +77,15 @@
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
-    "workbox-webpack-plugin": "^6.4.1",
-    "assert": "^2.0.0",
-    "buffer": "^6.0.3",
-    "constants-browserify": "^1.0.0",
-    "crypto-browserify": "^3.12.0",
-    "stream-browserify": "^3.0.0"
+    "workbox-webpack-plugin": "^6.4.1"
   },
   "devDependencies": {
+    "@types/node-rsa": "^1.1.1",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.4",
     "lerna": "^3.22.1",
     "postcss": "^8.4.12",
-    "tailwindcss": "^3.0.24",
-    "@types/uuid": "^8.3.4",
-    "@types/node-rsa": "^1.1.1"
+    "tailwindcss": "^3.0.24"
   },
   "scripts": {
     "start": "node scripts/start.js",
