--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "npm install; lerna bootstrap;",
     "start:webapp": "lerna run --scope webapp --stream start",
     "build:webapp": "lerna run --scope webapp --stream build",
+    "prod:webapp": "lerna run --scope webapp --stream run:prod",
     "start:full-node": "lerna run --scope full-node --stream start:dev",
     "build:full-node": "lerna run --scope full-node --stream build"
   },
