--- a/src/webapp/package.json
+++ b/src/webapp/package.json
@@ -91,6 +91,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "run:prod": "serve -s build",
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
