--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,11 +18,11 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - name: check files
-        run: |
-          ll
       - name: Build and push
         uses: docker/build-push-action@v3
         with:
+          context: .
+          file: Dockerfile.webapp
           push: true
-          tags: salimondev/webapp
+          tags: salimondev/webapp:latest
+          github-token: ${{ github.token }}
