--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,21 +8,34 @@ on:
 jobs:
   push-image:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+      - uses: actions/checkout@v2
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile.webapp
-          push: true
-          tags: salimondev/webapp:latest
-          github-token: ${{ github.token }}
+      - name: Build the Docker image
+        run: docker build . --file Dockerfile.webapp --tag salimondev/webapp:latest
+      - name: Docker Push
+        run: docker push salimondev/webapp:latest
+
+    # steps:
+    #   - name: Set up QEMU
+    #     uses: docker/setup-qemu-action@v2
+    #   - name: Set up Docker Buildx
+    #     uses: docker/setup-buildx-action@v2
+    #   - name: Login to DockerHub
+    #     uses: docker/login-action@v2
+    #     with:
+    #       username: ${{ secrets.DOCKER_USERNAME }}
+    #       password: ${{ secrets.DOCKER_TOKEN }}
+    #   - name: Build and push
+    #     uses: docker/build-push-action@v3
+    #     with:
+    #       context: .
+    #       file: ./Dockerfile.webapp
+    #       push: true
+    #       tags: salimondev/webapp:latest
+    #       github-token: ${{ github.token }}
