--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,12 @@ on:
 jobs:
   push-image:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+      - name: install packages
+        run: npm run bootstrap
+      - name: build webapp
+        run: npm run build:webapp
       - name: Login to DockerHub
         uses: docker/login-action@v2
         with:
