--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,5 +5,12 @@ services:
       context: .
       dockerfile: Dockerfile.webapp
     ports:
-      - "8080:80"
+      - "3000:80"
+    stdin_open: true
+  node:
+    build:
+      context: .
+      dockerfile: Dockerfile.node
+    ports:
+      - "8080:8080"
     stdin_open: true
