--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:webapp": "lerna run --scope webapp --stream build",
     "prod:webapp": "lerna run --scope webapp --stream run:prod",
     "start:full-node": "lerna run --scope full-node --stream start:dev",
-    "build:full-node": "lerna run --scope full-node --stream build"
+    "build:full-node": "lerna run --scope full-node --stream build",
+    "prod:full-node": "lerna run --scope full-node --stream start:prod"
   },
   "devDependencies": {
     "lerna": "^3.22.1"
