--- a/src/full-node/package.json
+++ b/src/full-node/package.json
@@ -37,7 +37,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
-    "crypto": "^1.0.1"
+    "crypto": "^1.0.1",
+    "@nestjs/config": "^2.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
