--- a/kubernates/node-deployment.yml
+++ b/kubernates/node-deployment.yml
@@ -18,7 +18,7 @@ spec:
       containers:
         - env:
             - name: MONGO_URI
-              valueFomr:
+              valueFrom:
                 secretKeyRef:
                   key: mongo
                   name: fullnode
