--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,8 +32,8 @@ jobs:
       - name: Docker Push Node
         run: docker push salimondev/node:${{ github.sha }}
       # deploy to aravan kubernates service
-      - name: get deployment script
-        run: wget -q https://napi.arvancloud.com/paas/v1/regions/ir-thr-mn1/downloads/cli/linux/arvan
+      # - name: get deployment script
+      #   run: wget -q https://github.com/arvancloud/cli/releases/download/v1.0.3/arvan_1.0.3_linux_amd64.tar.gz
       - name: make the script executable
         run: chmod +x arvan
       - name: login into kbs service
